[package]
authors = ["Louis Dalibard (OnTake/make-42) <ontake@ontake.dev>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "tasogare"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.3"
chrono = "0.4.41"
clap = { version = "4.3.14", features = ["derive"] }
confy = "1.0.0"
homedir = "0.3.4"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
map_3d = "0.1.5"
reqwest = "0.12.18"
satkit = "0.5.6"
serde = "1.0.219"
serde_json = "1.0.140"
sgp4 = "2.3.0"
star-catalog = "0.0.8"
tokio = {version = "1.45.1", features=["full"]}


# Enable a small amount of optimization in the dev profile.
#[profile.dev]
#opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
#[profile.dev.package."*"]
#opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
